[package]
name = "hsv-mb2"
version = "0.1.0"
authors = ["ethan dibble <edibble@pdx.edu>"]
edition = "2024"

[dependencies]
cortex-m-rt = "0.7"
critical-section-lock-mut = "0.1.2"
embedded-hal = "1.0.0"
microbit-v2 = "0.16"
panic-halt = "1.0.0"
panic-rtt-target = "0.2"
rtt-target = "0.6"

[dependencies.cortex-m]
version = "0.7"
features = ["inline-asm", "critical-section-single-core"]

[dependencies.hsv]
git = "https://github.com/pdx-cs-rust-embedded/hsv"

[dependencies.state-enum]
git = "https://github.com/edibblepdx/state-enum"

[[bin]]
name = "hsv-mb2"
path = "src/main.rs"
test = false
doctest = false
bench = false
